Stdout-only grading, multifile submissions, testcase extension prototype, canvas draft (#61)
* Update issue templates (#58)

* Add a few links to readme

* Fix copytree not working on python<3.8

* Fix sys.audit not being available in python3.6

* Unfinished business

* Fix python's test helper being susceptible to try, except cheating

* Remove vscode workplace file

* Major refactoring (unstable)

* More major and extremely unstable refactoring
(We're trying to make a convenient architecture for stdout-only testcases)

* Add stdout-only submission gathering

* Finalize the unstable stdout-only testcase

* Debugging and writing horrible commit messages

* More bugfixes and can finally run

* Fix stdout only testcases always being triggered

* Remove the old anti-cheat

* First stable version after the implementation of stdout-only testcases

(stdout-only testcases are still not in a working condition)

* Fix guide & stats not recognizing positional arguments

* Stdout-related fixes for guide, config, and templating

* Move testcase picker into its own module

* Got singlefile-stdout-only grading to work

* Created stdout-only example dir

* Finish multifile submission grading and stdout example dir

* 2.15.0

* Remove ALLOWED LANGUAGES setting

Stdout-only grading wasn't affected by it anyway, and there is no way anyone would ever use this setting in regular grading because testcases are written for specific languages.

* Remove ALLOWED LANGUAGES setting

Stdout-only grading wasn't affected by it anyway, and there is no way anyone would ever use this setting in regular grading because testcases are written for specific languages.

* Remove case-sensitive grading option

Who in the world would ever want submission discovery to be case-sensitive?

* Minor refactoring

* Create interface for canvas cli tool

* Canvas integration draft

* Fix incorrect imports and untimely errors

* Update README to r